# twosquares

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
tests/: test_decomposition.py
twosquares/: __init__.py
